# sxAct

./: .gitignore  .pre-commit-config.yaml  .vale.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Project.toml  README.md  SECURITY.md  SETUP.md  _typos.toml  docker-compose.yml  dump-session.md  justfile  llms.txt  main.py  pyproject.toml  sxact-status.md  test.py  wolfram.sh
.beads/: interactions.jsonl  issues.jsonl  metadata.json  sync_base.jsonl
.beads/backup/: backup_state.json  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.binder/: Dockerfile
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  docs.yml  lint.yml  record-ci-baseline.yml  release-container.yml  release.yml  test.yml
benchmarks/: baseline.json  bench_xcore.py  ci_baseline.json
debates/sessions/: 2026-01-26-context-isolation-fix.md  2026-01-26-physics-math-understanding.md
docs/: Manifest.toml  Project.toml  make.jl  tensordsl-integration.md  wl_fundamentals.ipynb  wl_fundamentals.py  wolfram.md  xact.md
docs/examples/: basics.jl  invar.jl
docs/migration/: xact-1.3.0-analysis.md
docs/site/: architecture.md  index.md
docs/src/: api-julia.md  api-python.md  api-verification.md  api.md  architecture.md  contributing.md  getting-started.md  index.md  installation.md  internals.md  naming.md  status.md  verification-tools.md  wolfram-migration.md  wolfram-translation-reference.md
handoffs/: 2026-03-06_23-06-04_sxAct-z1c_butler-examples-extraction.md  2026-03-06_23-39-51_sxAct-z1c_butler-wl-compat-layer.md  2026-03-07_13-49-16_sxAct-z1c_xperm-wl-compat-debugging.md  2026-03-08_12-33-42_sxAct-z1c_butler-wl-compat-completion.md  2026-03-09_09-44-21_butler-suite-100pct.md  2026-03-09_17-45-00_sxact-implementation-roadmap.md  2026-03-10_12-35-30_sxAct-9g1_young-symmetry.md  2026-03-10_17-09-54_P2-milestones-simplify-curvature-pertorders-ibp-vard.md  2026-03-10_18-00-12_ibp-vard-complete.md  2026-03-12_18-06-34_sxAct-ki0_christoffel-symbols.md  2026-03-16_15-38-10_invar-all-11-phases-complete.md  2026-03-17_12-36-51_backtracking-canonicalization.md  2026-03-17_16-02-44_notebook-infra-and-python-api.md  2026-03-17_21-08-54_translate-migration-jet-fix.md  2026-03-18_14-45-00_ci-optimization-efficiency.md  2026-03-23_18-16-41_architecture-diagnostics-round.md
notebooks/: test_python_wolfram.py  test_xact.wls
notebooks/julia/: basics.ipynb  basics.qmd  carroll_schwarzschild.ipynb  carroll_schwarzschild.qmd  foundations_2d_polar.ipynb  foundations_2d_polar.qmd  foundations_3d_coords.ipynb  foundations_3d_coords.qmd  foundations_sphere.ipynb  foundations_sphere.qmd  mtw_gravitational_waves.ipynb  mtw_gravitational_waves.qmd  physics_em.ipynb  physics_em.qmd  physics_fluids.ipynb  physics_fluids.qmd  wald_cosmology.ipynb  wald_cosmology.qmd
notebooks/pluto/: basics.jl
notebooks/python/: basics.ipynb  basics.qmd
oracle/: Dockerfile  VERSION  checksums.sha256  init.wl  kernel_manager.py  server.py
plans/: 2026-01-22-sprint1-derisk-equivalence.md  2026-03-08-elegua-chacana-ecosystem.md  2026-03-11-multi-term-symmetry-engine.md  2026-03-20-architecture-hardening.md
research/: CHACANA_PUBLICATION_STRATEGY.md  METAMIGRATION_HARNESS.md  PUBLICATION_STRATEGY.md  XACT_MIGRATION_RESEARCH.md  symbolics-integration.md  test_python_wolfram.py
resources/: RESOURCES.md
scripts/: extract_butler.py  gen_butler_snapshots.py  gen_new_snapshots.py  notebook_smoke.jl  qmd2ipynb.py
sessions/: 2026-01-08-initial-setup.md
specs/: 2026-01-09-three-layer-testing-architecture.md  2026-01-22-design-framework-gaps.md  2026-03-03-ast-normalization.md  2026-03-05-notebook-extraction.md  2026-03-05-property-test-design.md  2026-03-06-xperm-xtensor-design.md  2026-03-08-chacana-grammar.md  2026-03-08-chacana-specification.md  2026-03-08-chacana-treesitter.md  2026-03-08-elegua-specification.md  2026-03-09-documentation-strategy.md  2026-03-09-xact-migration-master-plan.md  2026-03-13-wolfram-expression-translator.md  XACT_LIBRARIES_MIGRATION_PLAN.md
src/: InvarDB.jl  TExpr.jl  Validation.jl  XCore.jl  XInvar.jl  XPerm.jl  XTensor.jl  xAct.jl
src/XTensor/: Canonical.jl  Contract.jl  XTras.jl
src/julia/: Manifest.toml  Project.toml  XCore.jl  XPerm.jl  XTensor.jl  xAct.jl
src/sxact/: __init__.py  cli.py
test/: runtests.jl
test/julia/: test_docs.jl  test_validation.jl  test_xinvar.jl  test_xperm.jl  test_xperm_properties.jl  test_xtensor.jl  test_xtensor_fuzz.jl
tests/: conftest.py  test_adapter_conformance.py  test_julia_adapter.py  test_python_adapter.py  test_wolfram_adapter.py
tests/compare/: test_comparator.py  test_comparator_mock.py
tests/integration/: test_elegua_pipeline_smoke.py  test_isolation.py  test_tensor_tier3.py  test_xact_basics.py
tests/normalize/: test_pipeline.py
tests/oracle/: test_client.py  test_kernel_manager_concurrency.py  test_kernel_manager_context.py  test_result.py
tests/properties/: xcore_symbol_laws.toml
tests/runner/: test_isolation.py  test_loader.py  test_property_runner.py  test_run_cmd.py  test_run_live.py
tests/schema/: test-schema.json
tests/snapshot/: test_compare.py  test_runner.py  test_store.py  test_writer.py
tests/translate/: test_action_recognizer.py  test_integration.py  test_renderers.py  test_repl.py  test_wl_parser.py
tests/unit/: conftest.py  test_bridge.py  test_comparison_layers.py  test_elegua_adapters.py  test_elegua_documentation.py  test_elegua_migration_boundary.py  test_numeric_layer.py  test_python_adapter.py  test_runtime_init.py  test_tensor_sampling.py  test_texpr.py  test_thread_safety.py  test_toml_migration.py  test_xact_api.py  test_xcoba.py  test_xcore_python.py
tests/xcore/: dagger_and_registry.toml  list_utils.toml  options.toml  symbol_utils.toml  upvalues.toml
tests/xperm/: higher_rank_symmetry.toml  mixed_slot_symmetry.toml  multi_index_sets.toml  product_symmetry.toml
tests/xtensor/: christoffel.toml  compound_canonicalization.toml  xtras.toml  (+11 more)
tooling/: Manifest.toml
(+331 files in other folders)
