[project]
name = "xact-py"
version = "0.3.0"
description = "Testing framework for xAct implementations"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.26.0",
    "juliacall>=0.9.31",
    "juliapkg>=0.1.14",
    "numpy>=2.2.6",
    "requests>=2.28.0",
    "tomli>=2.4.0",
]

[project.scripts]
xact-test = "sxact.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.3.0",
    "types-requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/xact", "src/python/sxact"]

[tool.hatch.build.targets.wheel.force-include]
"src/julia" = "xact/julia"

[tool.hatch.build.targets.sdist.force-include]
"src/julia" = "xact/julia"

[tool.mypy]
python_version = "3.10"
mypy_path = "src/python"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# External packages without type stubs — not our code to fix
module = ["juliacall", "juliacall.*", "jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "oracle: tests requiring the Docker oracle server",
    "slow: tests that take a long time to run (xAct loading ~3+ min)",
]
