[project]
name = "sxact-workspace"
version = "0.3.0"
description = "Development workspace for xAct implementations"
requires-python = ">=3.10"
dependencies = [
    "sxact",
    "xact-py",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.3.0",
    "types-requests>=2.28.0",
    "pre-commit>=3.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
sxact = { workspace = true }
xact-py = { workspace = true }

[tool.mypy]
python_version = "3.10"
mypy_path = "packages/xact-py/src:packages/sxact/src"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# External packages without type stubs
module = ["juliacall", "juliacall.*", "jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/xact-py/src", "packages/sxact/src"]
markers = [
    "oracle: tests requiring the Docker oracle server",
    "slow: tests that take a long time to run (xAct loading ~3+ min)",
]
