[project]
name = "sxact-workspace"
version = "0.7.1"
description = "Development workspace for xAct implementations"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "sashakile", email = "saxa.kile@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "sxact",
    "xact-py",
    "elegua",
]

[project.urls]
Homepage = "https://github.com/sashakile/XAct.jl"
Repository = "https://github.com/sashakile/XAct.jl"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.3.0",
    "types-requests>=2.28.0",
    "pre-commit>=3.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
sxact = { workspace = true }
xact-py = { workspace = true }

[tool.mypy]
python_version = "3.11"
mypy_path = "packages/xact-py/src:packages/sxact/src"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["^tests/", "^scripts/", "^benchmarks/", "^oracle/", "^main\\.py$"]

[[tool.mypy.overrides]]
# External packages without type stubs
module = ["juliacall", "juliacall.*", "jsonschema", "jsonschema.*", "wolframclient", "wolframclient.*", "flask", "flask.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/xact-py/src", "packages/sxact/src"]
markers = [
    "oracle: tests requiring the Docker oracle server",
    "slow: tests that take a long time to run (xAct loading ~3+ min)",
]

# ── Ruff (linter + formatter) ──────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long — handled by formatter
    "RUF001",  # ambiguous unicode in string (intentional math symbols)
    "RUF002",  # ambiguous unicode in docstring (intentional en-dashes)
    "RUF003",  # ambiguous unicode in comment (intentional symbols)
    "RUF059",  # unused unpacked variable — common in destructuring patterns
    "RUF022",  # unsorted __all__ — grouped by category, not alphabetical
    "SIM105",  # contextlib.suppress — explicit try/except is clearer
    "SIM108",  # ternary operator — multi-line if/else often more readable
    "UP038",   # isinstance(x, (A, B)) — tuple form is faster than union on <3.12
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "B002",   # false positive: -(-a) is __neg__, not prefix --
    "B017",   # pytest.raises(Exception) is acceptable in tests
    "RUF012", # mutable class defaults fine in test fixtures
    "RUF043", # regex metacharacters in match= are intentional
    "SIM117", # nested with statements more readable in tests
]
"benchmarks/**" = [
    "B905",   # zip-without-strict ok in benchmarks
]
"scripts/**" = [
    "B007",   # unused loop variable ok in one-off scripts
    "B905",   # zip-without-strict ok in scripts
]
"oracle/**" = [
    "B",      # bugbear not enforced in oracle scripts
    "SIM",    # simplify not enforced in oracle scripts
    "RUF",    # ruff-specific not enforced in oracle scripts
]

[tool.ruff.lint.isort]
known-first-party = ["xact", "sxact"]

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.3.0",
    "types-requests>=2.28.0",
    "pre-commit>=3.0.0",
    "jupyterlab>=4.5.6",
]
